noUiSlider scrollbar and checkbox overlap fix, fixes #76.

--- a/meteor/client/less/codebounty.less
+++ b/meteor/client/less/codebounty.less
@@ -5,3 +5,8 @@
 @import "adminView.lessimport";
 @import "bitcoinView.lessimport";
 @import "reward.lessimport";
+
+// noUiSlider fix
+.noUiSlider.disabled a {
+    display: none;
+}
